--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-minimal
-title: Welcome to the online portfolio of Eugene Smith
-description: Feel free to bookmark this
+title: B. Eugene Smith
